<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E1D1D"
    tools:context=".bmiActivity">


    <ImageView
        android:id="@+id/imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/contentLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:contentDescription="TODO"
        android:padding="10dp"
        android:src="@drawable/ok">

    </ImageView>


    <RelativeLayout
        android:id="@+id/contentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/card_background"
        android:padding="20dp">

        <TextView
            android:id="@+id/bmiDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/trans"
            android:text="@string/_22"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/genderDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bmiDisplay"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/gender"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bmiCategoryDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/genderDisplay"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/your_bmi_category_is"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold">

        </TextView>

    </RelativeLayout>


    <android.widget.Button
        android:id="@+id/gotoMain"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/contentLayout"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/recalculate_your_bmi"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold">

    </android.widget.Button>


</RelativeLayout>

