<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E1D1D"
    tools:context=".MainActivity">


    <RelativeLayout
        android:id="@+id/centerHorizontalLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/centerVerticalLine"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerInParent="true">

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/male"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_above="@id/heightLayout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="35dp"
        android:layout_toStartOf="@id/centerVerticalLine"
        android:background="@drawable/card_background">

        <ImageView
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_above="@id/textMale"
            android:layout_centerInParent="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="TODO"
            android:src="@drawable/male">

        </ImageView>

        <TextView
            android:id="@+id/textMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/male"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold">

        </TextView>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/female"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_above="@id/heightLayout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="35dp"
        android:layout_toEndOf="@id/centerVerticalLine"
        android:background="@drawable/card_background">

        <ImageView
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_above="@id/textFemale"
            android:layout_centerInParent="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="TODO"
            android:src="@drawable/female">

        </ImageView>

        <TextView
            android:id="@+id/textFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/femaleText"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold">

        </TextView>


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/heightLayout"
        android:layout_width="340dp"
        android:layout_height="150dp"
        android:layout_above="@id/centerHorizontalLine"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="-50dp"
        android:background="@drawable/card_background">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/height"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>


        <TextView
            android:id="@+id/currentHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="50dp"
            android:text="@string/startingHeight"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold">

        </TextView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/currentHeight"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/unit"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />


        <SeekBar
            android:id="@+id/seekBarForHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:progressTint="#FF4C4C"
            android:thumbTint="@color/white">

        </SeekBar>

    </RelativeLayout>

    <android.widget.Button
        android:id="@+id/calculateBMI"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/calculate_your_bmi"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold">

    </android.widget.Button>


    <RelativeLayout
        android:id="@+id/weight"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/heightLayout"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="85dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_toStartOf="@id/centerVerticalLine"
        android:background="@drawable/card_background">


        <TextView
            android:id="@+id/textWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/weight"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold">

        </TextView>


        <TextView
            android:id="@+id/currentWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/startingWeight"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold">

        </TextView>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/plus_minus">

            <ImageView
                android:id="@+id/decrementWeight"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="TODO"
                android:src="@drawable/minus">

            </ImageView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/plus_minus">

            <ImageView
                android:id="@+id/incrementWeight"
                android:layout_width="30dp"
                android:layout_height="30dp"

                android:contentDescription="@string/TODO"
                android:src="@drawable/add">

            </ImageView>

        </RelativeLayout>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/Age"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/heightLayout"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="85dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_toEndOf="@id/centerVerticalLine"
        android:background="@drawable/card_background">


        <TextView

            android:id="@+id/textAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/age"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/currentAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/startingAge"
            android:textAlignment="center"

            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold">

        </TextView>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/plus_minus">

            <ImageView
                android:id="@+id/decrementAge"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/TODO"

                android:src="@drawable/minus">

            </ImageView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/plus_minus">

            <ImageView
                android:id="@+id/incrementAge"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/TODO"
                android:src="@drawable/add">

            </ImageView>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
